# godwoken

./: Cargo.toml  cargo_clean  rust-toolchain
.cargo/: config.toml
.github/workflows/: rust.yml
crates/block-producer/: Cargo.toml
crates/block-producer/src/: block_producer.rs  challenger.rs  chaos.rs  custodian.rs  lib.rs  main.rs  poa.rs  poller.rs  produce_block.rs  psc.rs  replay.rs  replay_block.rs  rpc_client.rs  runner.rs  test_bot.rs  test_mode_control.rs  tester.rs  trace.rs  wallet.rs  withdrawal.rs  withdrawal_finalizer.rs
crates/chain/: Cargo.toml
crates/chain/src/: chain.rs
crates/challenge/: Cargo.toml
crates/challenge/src/: lib.rs  offchain.rs
crates/chaos/: Cargo.toml
crates/chaos/src/: context.rs  deposit.rs  lib.rs  rpc_client.rs  wallet.rs
crates/ckb-hardfork/: Cargo.toml
crates/config/src/: config.rs
crates/db/src/: db.rs  schema.rs  transaction.rs
crates/generator/: Cargo.toml
crates/generator/src/: generator.rs  genesis.rs  traits.rs
crates/godwoken-bin/: Cargo.toml
crates/jsonrpc-types/src/: godwoken.rs
crates/mem-pool/: Cargo.toml
crates/mem-pool-old/: Cargo.toml
crates/mem-pool/src/: batch.rs  constants.rs  default_provider.rs  kafka.rs  lib.rs  mem_block.rs  pool.rs  traits.rs  types.rs
crates/mem-pool/src/pool/: tx.rs  (+5 more)
crates/p2p-network/: Cargo.toml
crates/readonly-node/: Cargo.toml
crates/readonly-node/src/: indexer_types.rs  jsonrpc_server.rs  main.rs  poller.rs  types.rs
crates/replay-chain/: Cargo.toml
crates/replay-chain/src/: setup.rs
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: contract.rs  gw_client.rs  rpc_client.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: registry.rs  server.rs
crates/store/: Cargo.toml
crates/store/src/: chain_view.rs  smt_store_impl.rs  state_db.rs  store_impl.rs  transaction.rs
crates/tests/: Cargo.toml
crates/tools/: Cargo.toml
crates/tools/src/: deploy_genesis.rs  deploy_scripts.rs  dump_tx.rs  generate_config.rs  godwoken_rpc.rs  main.rs  prepare_scripts.rs  setup.rs  types.rs
crates/traits/src/: lib.rs
crates/types/schemas/: godwoken.mol
crates/utils/: Cargo.toml
crates/utils/src/: fee.rs  transaction_skeleton.rs  wallet.rs
crates/web3-indexer/: Cargo.toml
(+30 files in other folders)
