[workspace]
members = [
  "crates/chain",
  "crates/config",
  "crates/common",
  "crates/mem-pool",
  "crates/generator",
  "crates/traits",
  "crates/db",
  "crates/store",
  "crates/types",
  "crates/block-producer",
  "crates/jsonrpc-types",
  "crates/rpc-server",
  "crates/tools",
  "crates/tests",
  "crates/chaos",
]

[profile.release]
overflow-checks = true
