[package]
name = "gw-chaos"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-common = { path = "../common" }
gw-config = { path = "../config" }
gw-chain = { path = "../chain" }
gw-types = { path = "../types" }
gw-store = { path = "../store" }
gw-generator = { path = "../generator" }
gw-mem-pool = { path = "../mem-pool" }
gw-jsonrpc-types = { path = "../jsonrpc-types" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ckb-fixed-hash = "0.38.0"
ckb-types = "0.38.0"
async-jsonrpc-client = { version = "0.3.0", default-features = false, features = ["http-async-std"] }
async-std = "1.9.0"
ckb-crypto = "0.38.0"
faster-hex = "0.4"
