[package]
name = "gw-readonly-node"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"
autobins = false

[[bin]]
name = "gw-readonly-node"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.4.2"
async-jsonrpc-client = "0.3.0"
clap = "2.33.3"
ctrlc = "3.1.6"
env_logger = "0.8.3"
log = "0.4.14"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "1.2.5"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls" ] }

ckb-types = "0.37.0"
godwoken-polyjuice = "0.0.6"
gw-chain = { path = "../chain" }
gw-common = { path = "../common" }
gw-config = { path = "../config" }
gw-generator = { path = "../generator" }
gw-jsonrpc-types= { path = "../jsonrpc-types" }
gw-store = { path = "../store" }
gw-types = { path = "../types" }
